Fix alignment

--- a/src/scss/snippet.scss
+++ b/src/scss/snippet.scss
@@ -162,14 +162,16 @@
                 // Input Area
                 > .animate-zoom-into-bullet {
                     background-color: $kanban-bg-input;
-                    margin: .25rem .2rem;
+                    margin: .25rem 0 .25rem .2rem;
                     border-radius: .3rem;
                     box-shadow: $kanban-sdw-cell;
-                    margin-left: 1.2rem;
+                    margin-left: 1.5rem;
                     padding-bottom: 0.1rem;
 
                     > .tree-node--children {
-                        padding-right: 0.5rem;
+                        .rem {
+                            padding-right: 0.5rem;
+                        }
                     }
 
                     > div:first-child {
@@ -186,7 +188,7 @@
                     margin: 5px;
                     border-radius: .3rem !important;
                     box-shadow: $kanban-sdw-cell !important;
-                    margin-left: 1.2rem !important;
+                    margin-left: 1.5rem !important;
                     margin-right: .3rem !important;
                     padding-right: 1rem;
                     .node-top-level-in-portal {
